--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=MYSQL8001.site4now.net
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=db_a87597_foodstu
+DB_USERNAME=a87597_foodstu
+DB_PASSWORD=43TV@BB3w
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
