--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=MYSQL8001.site4now.net
-DB_PORT=3306
-DB_DATABASE=db_a87597_foodstu
-DB_USERNAME=a87597_foodstu
-DB_PASSWORD=43TV@BB3w
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
