--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=
-DB_PORT=
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
+DB_HOST=localhost
+DB_PORT=3306
+DB_DATABASE=buyzone2
+DB_USERNAME=test123
+DB_PASSWORD=test123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
