--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "darryldecode/cart": "*",
         "guzzlehttp/guzzle": "^7.2",
         "izniburak/laravel-auto-routes": "^1.6",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "laravel/ui": "^4.4",
+        "mckenziearts/laravel-notify": "^2.4",
         "salmanzafar/laravel-crud-generator": "^1.0"
     },
     "require-dev": {
