--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.4",
         "mckenziearts/laravel-notify": "^2.4",
-        "salmanzafar/laravel-crud-generator": "^1.0"
+        "salmanzafar/laravel-crud-generator": "^1.0",
+        "unicodeveloper/laravel-paystack": "^1.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
