--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "darryldecode/cart": "*",
+        "filament/filament": "^3.2",
         "guzzlehttp/guzzle": "^7.2",
         "izniburak/laravel-auto-routes": "^1.6",
         "laravel/framework": "^10.10",
