--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,15 @@ DB_DATABASE=buyzone2
 DB_USERNAME=test123
 DB_PASSWORD=test123
 
+
+DB_CONNECTION=mysql
+DB_HOST=MYSQL8001.site4now.net
+DB_PORT=3306
+DB_DATABASE=db_a87597_foodstu
+DB_USERNAME=a87597_foodstu
+DB_PASSWORD=43TV@BB3w
+
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
