--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.4",
         "mckenziearts/laravel-notify": "^2.4",
+        "mvanduijker/laravel-transactional-mails": "^1.7",
         "salmanzafar/laravel-crud-generator": "^1.0",
         "unicodeveloper/laravel-paystack": "^1.1"
     },
