--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "akaunting/laravel-money": "^5.1",
         "cloudinary-labs/cloudinary-laravel": "^2.0",
         "darryldecode/cart": "*",
         "doctrine/dbal": "^3.8",
